apps/teams/team-product/api/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: "guestbook"
  namespace: product
spec:
  gateways:
    - istio-gateways/public
  hosts:
    - "guestbook.mydomain.com"
  http:
    - name: version
      match:
        - headers:
            x-version:
              exact: "1.2.0"
      route:
        - destination:
            host: "guestbook"
            subset: canary
          weight: 100
    - name: experiment-1
      match:
        - headers:
            x-version:
              exact: "1.16.2"
      route:
        - destination:
            host: "guestbook-strange-canary"
          weight: 100
    - name: primary
      route:
        - destination:
            host: "guestbook"
            subset: stable
          weight: 100
        - destination:
            host: "guestbook"
            subset: canary
          weight: 0
